--- a/Exercícios_NumPy.ipynb
+++ b/Exercícios_NumPy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgWhJdr1dWNWvBUq6V4oBw",
+      "authorship_tag": "ABX9TyNVgxYc6b4ITZjcX5mvPQkZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,8 +36,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "m_Imrlta-kSU"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "pCbAMgj10HYU"
       },
@@ -63,7 +70,7 @@
       "metadata": {
         "id": "8WScbrh70M_k"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -86,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mLe527Nf0OrY",
-        "outputId": "3e794225-4cd1-4449-f918-167942a5b52f"
+        "outputId": "863d8cee-b847-483e-a78f-e89b37e81dd2"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +105,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
@@ -120,7 +127,7 @@
       "metadata": {
         "id": "hs4fFDlL6Hjw"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -132,7 +139,7 @@
       "metadata": {
         "id": "4jukp1guPA3c"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -152,7 +159,7 @@
       "metadata": {
         "id": "-rQMAPa0PCud"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -182,9 +189,9 @@
           "height": 472
         },
         "id": "rK_8rWOJPr7U",
-        "outputId": "6a4fb4d7-01e4-4cfd-c6dc-d87de9e469c8"
+        "outputId": "93155032-c834-4253-c935-bf5282e55f8c"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -215,7 +222,7 @@
       "metadata": {
         "id": "_ONd1julVtRm"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -230,9 +237,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4nJZo9s4PwKv",
-        "outputId": "ea3e7356-b9a1-4383-e492-7ab4335f8626"
+        "outputId": "b8add492-c0d5-4bc1-c64b-4425b4b278bc"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,9 +262,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hY3JhUamUQJb",
-        "outputId": "f5191bbc-8458-426a-84da-431512cf1d15"
+        "outputId": "bd8bcb57-bc43-4177-c5aa-51d618b4ed5d"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,9 +295,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRhppNY4UdH7",
-        "outputId": "c48bb9dd-7bc4-497e-c410-fd55c882a38d"
+        "outputId": "1ca7c005-5992-4e15-9c3d-d2ce9e7792ef"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +307,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -319,9 +326,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MAG4ac4YbhlM",
-        "outputId": "79d933fe-0514-4d34-daa2-5f509e3afbf7"
+        "outputId": "3d42b6d5-f8a7-4e52-f05d-98f817882894"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -331,7 +338,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -351,9 +358,9 @@
           "height": 472
         },
         "id": "ynx-qV_ecCYS",
-        "outputId": "9159bc9d-20fd-4197-a122-26746f142abf"
+        "outputId": "43f02e11-e486-4392-a8a2-318777e4fc12"
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -386,7 +393,7 @@
       "metadata": {
         "id": "lF9ETDbHdgvi"
       },
-      "execution_count": 30,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -403,9 +410,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Vjf0KurZFvi",
-        "outputId": "24836e08-4bed-4394-f8da-71b2247ad2a7"
+        "outputId": "4a6fb0e1-bbe4-4295-b9fa-1c2ae9dbd625"
       },
-      "execution_count": 35,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,9 +441,9 @@
           "height": 472
         },
         "id": "Azvjmz1daAsx",
-        "outputId": "8088728a-d2a6-4dae-cb05-d0dd33413da6"
+        "outputId": "3ee91eb4-a9d1-48aa-c4ff-dc180dd658e8"
       },
-      "execution_count": 36,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -469,9 +476,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pQ0mX0DAcMBv",
-        "outputId": "2a4b3dd7-9937-43f0-ce3f-128098269473"
+        "outputId": "e769b7bb-dcf9-4df3-da4c-aae7b044420e"
       },
-      "execution_count": 37,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +488,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 17
         }
       ]
     },
@@ -513,7 +520,7 @@
       "metadata": {
         "id": "I3ZwOpmPePhU"
       },
-      "execution_count": 54,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -532,9 +539,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JHdscgfee6kz",
-        "outputId": "1ccf2bbb-6109-468f-acba-34f1af2443d6"
+        "outputId": "294868b3-b15a-4c9d-ad79-73375eaf6c4e"
       },
-      "execution_count": 55,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,9 +570,9 @@
           "height": 472
         },
         "id": "nVboHE3jfPGN",
-        "outputId": "96e115c3-b434-4017-e6eb-abd513b889a7"
+        "outputId": "a99363a8-3065-4325-e62b-bc7ac9f7cf43"
       },
-      "execution_count": 56,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -589,9 +596,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "goG3EGaYfdOT",
-        "outputId": "e5f5a516-80fd-4dc9-b497-3c704c3b92da"
+        "outputId": "7805e83f-662e-4aca-dd0b-dd1f064d005d"
       },
-      "execution_count": 59,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +608,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 21
         }
       ]
     },
@@ -615,6 +622,208 @@
       "metadata": {
         "id": "s956uGHngKBM"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Apenas por diversão, vou tentar me aproximar do coeficiente angular das toranjas utilizando números aleatórios, gerados com a função np.random.uniform. Vou fazer apenas para as toranjas."
+      ],
+      "metadata": {
+        "id": "UOoc7P0O-nDy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random = np.random.uniform(14, 20, 100)\n",
+        "random"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y-W3Q2NY-x_I",
+        "outputId": "2dbd0e94-5707-47e3-cb26-9eb125ddf7ea"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([15.28155591, 18.45984125, 15.13210458, 19.360297  , 15.37137912,\n",
+              "       15.30227728, 19.62442003, 15.83696222, 14.22949408, 18.10225245,\n",
+              "       14.68406193, 14.46389265, 16.45284529, 14.36662667, 15.81718664,\n",
+              "       15.00348147, 17.74663383, 14.99248762, 19.82157921, 16.96928684,\n",
+              "       16.78817296, 18.25139159, 15.3634764 , 16.12358785, 14.20693615,\n",
+              "       16.79757453, 18.2454945 , 17.40459985, 14.02890591, 16.94096988,\n",
+              "       16.5552065 , 14.15304687, 19.77661034, 19.22385716, 14.84868526,\n",
+              "       17.96040636, 14.08826875, 17.4755105 , 15.8126675 , 18.66088678,\n",
+              "       19.80621199, 16.81392955, 14.81752177, 17.39828962, 15.81277114,\n",
+              "       17.13084605, 16.6218271 , 17.36623099, 19.1385227 , 16.68644844,\n",
+              "       15.34682721, 18.03431872, 15.58014157, 17.26008072, 18.69639321,\n",
+              "       14.87891723, 19.42553727, 16.57929532, 18.23004132, 17.56074394,\n",
+              "       14.87114819, 17.21329913, 16.57014318, 14.3760844 , 19.22300678,\n",
+              "       15.83473057, 18.54844639, 15.55741515, 15.33530498, 16.24908164,\n",
+              "       19.30247959, 14.74719688, 18.51610565, 17.29873862, 14.15877934,\n",
+              "       16.99432392, 14.03360037, 18.62531558, 19.95867236, 16.97761183,\n",
+              "       15.33051768, 15.87313512, 17.57606251, 19.11562959, 17.73214821,\n",
+              "       14.05633448, 14.28938213, 15.37142805, 18.30433423, 16.38667124,\n",
+              "       14.60529627, 19.41535602, 16.2624215 , 19.39248695, 18.86306302,\n",
+              "       14.85303381, 15.1039878 , 16.67057557, 15.31403233, 19.4305797 ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norma = np.array([])\n",
+        "\n",
+        "for i in range(100):\n",
+        "  print(f'{i} = {np.linalg.norm(peso_toranja-(random[i]*diametro_toranja+b_toranja))} ')\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hBVVnjaV_EN4",
+        "outputId": "2ec771a1-dcfa-4898-f3d2-621c713bceb0"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 = 351.5611093307143 \n",
+            "1 = 2245.5933711776966 \n",
+            "2 = 472.7993159220318 \n",
+            "3 = 2980.3663388729965 \n",
+            "4 = 279.0018824333575 \n",
+            "5 = 334.79348022982543 \n",
+            "6 = 3195.900581872655 \n",
+            "7 = 113.67656911988637 \n",
+            "8 = 1208.154965754607 \n",
+            "9 = 1953.823275291925 \n",
+            "10 = 837.5368403316581 \n",
+            "11 = 1017.0119645427983 \n",
+            "12 = 608.8319005667456 \n",
+            "13 = 1096.3220637908723 \n",
+            "14 = 99.03433475132053 \n",
+            "15 = 577.3882721667081 \n",
+            "16 = 1663.6837537003812 \n",
+            "17 = 586.3341914580782 \n",
+            "18 = 3356.7917045811555 \n",
+            "19 = 1029.6419285571362 \n",
+            "20 = 881.9928235396214 \n",
+            "21 = 2075.509227202557 \n",
+            "22 = 285.37037248707924 \n",
+            "23 = 341.40771994036083 \n",
+            "24 = 1226.5526371311905 \n",
+            "25 = 889.6559240901273 \n",
+            "26 = 2070.697589650214 \n",
+            "27 = 1384.6626924303591 \n",
+            "28 = 1371.7611911677357 \n",
+            "29 = 1006.5540167438791 \n",
+            "30 = 692.1737433238983 \n",
+            "31 = 1270.5048094342083 \n",
+            "32 = 3320.09487008824 \n",
+            "33 = 2869.027669036924 \n",
+            "34 = 703.4110989354675 \n",
+            "35 = 1838.0915593334416 \n",
+            "36 = 1323.3404020702417 \n",
+            "37 = 1442.505640420914 \n",
+            "38 = 95.75584965708666 \n",
+            "39 = 2409.640988859419 \n",
+            "40 = 3344.2512788057934 \n",
+            "41 = 902.9870887821625 \n",
+            "42 = 728.7949219350037 \n",
+            "43 = 1379.5154534903543 \n",
+            "44 = 95.83070861935938 \n",
+            "45 = 1161.3843016967357 \n",
+            "46 = 746.4395218087617 \n",
+            "47 = 1353.3656320895434 \n",
+            "48 = 2799.3929260727896 \n",
+            "49 = 799.0904210437526 \n",
+            "50 = 298.79868961495134 \n",
+            "51 = 1898.3958991263012 \n",
+            "52 = 114.11616077398993 \n",
+            "53 = 1266.7842899237498 \n",
+            "54 = 2438.6136766605932 \n",
+            "55 = 678.7895746044181 \n",
+            "56 = 3033.604536305796 \n",
+            "57 = 711.7934328166623 \n",
+            "58 = 2058.0888503556007 \n",
+            "59 = 1512.034831968249 \n",
+            "60 = 685.1164851928013 \n",
+            "61 = 1228.629185357162 \n",
+            "62 = 704.3390026811405 \n",
+            "63 = 1088.6098314389706 \n",
+            "64 = 2868.3337388670066 \n",
+            "65 = 112.00361821033619 \n",
+            "66 = 2317.892194664874 \n",
+            "67 = 131.3882896690291 \n",
+            "68 = 308.10006595028733 \n",
+            "69 = 443.1502124598918 \n",
+            "70 = 2933.1856208970285 \n",
+            "71 = 786.0889032383891 \n",
+            "72 = 2291.5031355678498 \n",
+            "73 = 1298.3147808000097 \n",
+            "74 = 1265.8293072284748 \n",
+            "75 = 1050.0564435679478 \n",
+            "76 = 1367.9319720841186 \n",
+            "77 = 2380.615566726112 \n",
+            "78 = 3468.6669475419963 \n",
+            "79 = 1036.4298049874094 \n",
+            "80 = 311.96644329937186 \n",
+            "81 = 141.3060621729859 \n",
+            "82 = 1524.5312664882172 \n",
+            "83 = 2780.7117308595343 \n",
+            "84 = 1651.8659894747163 \n",
+            "85 = 1349.3881508797092 \n",
+            "86 = 1159.3137059758246 \n",
+            "87 = 278.96246371808235 \n",
+            "88 = 2118.7071322894226 \n",
+            "89 = 554.9850048840624 \n",
+            "90 = 901.734536563723 \n",
+            "91 = 3025.2962891561897 \n",
+            "92 = 453.9831994273601 \n",
+            "93 = 3006.634369568693 \n",
+            "94 = 2574.6151052066703 \n",
+            "95 = 699.8693321753273 \n",
+            "96 = 495.6484296291521 \n",
+            "97 = 786.1567413114925 \n",
+            "98 = 325.2879623910047 \n",
+            "99 = 3037.7193337400804 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Notei que o menor valor para a função linalg.norm está no índice 14. Não está nem perto do valor encontrado utilizando o MMQ, o que demonstra que o método não é eficiente. Na verdade, gerar números aleatórios dependeria da sorte. Mesmo usando o np.seed, é possível garantir a reprodutibilidade depois de os números forem gerados, mas antes de se gerar os valores não serve de muita coisa.\n",
+        "\n",
+        "Outro detalhe é que se o range do array gerado pelo np.random.uniform for alto e quanto mais próximo do valor perfeito de inclinação for o intervalo de geração de números, melhor. Mas é difícil tentar mensurar um valor como o coeficiente angular de uma reta com boa precisão apenas olhando para o gráfico, então, de qualquer forma, método ruim."
+      ],
+      "metadata": {
+        "id": "y7sAsfhSCB6z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VMfL1ydS_nJZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
